Modify the interface design

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
-	<title>BookSaw - Free Book Store HTML CSS Template</title>
+	<title>KouToub</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="apple-mobile-web-app-capable" content="yes">
+	<link rel="icon" href="images/icone1.png">
 	<meta name="author" content="">
 	<meta name="keywords" content="">
 	<meta name="description" content="">
@@ -50,8 +51,8 @@
 					<div class="col-md-6">
 						<div class="right-element">
 							<a href="#" class="user-account for-buy"><i
-									class="icon icon-user"></i><span>Account</span></a>
-							<a href="#" class="cart for-buy"><i class="icon icon-clipboard"></i><span>Cart:(0
+									class="icon icon-user"></i><span> Account</span></a>
+							<a href="#" class="cart for-buy"><i class="icon icon-clipboard"></i><span> Cart:(0
 									$)</span></a>
 
 							<div class="action-menu">
@@ -80,7 +81,7 @@
 
 					<div class="col-md-2">
 						<div class="main-logo">
-							<a href="index.html"><img src="images/main-logo.png" alt="logo"></a>
+							<a href="index.html"><img class="imglogo" src="images/main-logo.png" alt="logo"></a>
 						</div>
 
 					</div>
@@ -96,14 +97,14 @@
 
 										<ul>
 											<li class="active"><a href="index.html">Home</a></li>
-											<li><a href="index.html">About</a></li>
-											<li><a href="index.html">Styles</a></li>
-											<li><a href="index.html">Blog</a></li>
-											<li><a href="index.html">Post Single</a></li>
-											<li><a href="index.html">Our Store</a></li>
-											<li><a href="index.html">Product Single</a></li>
-											<li><a href="index.html">Contact</a></li>
-											<li><a href="index.html">Thank You</a></li>
+											<li class="a"><a href="index.html">About</a></li>
+											<li class="a"><a href="index.html">Styles</a></li>
+											<li class="a"><a href="index.html">Blog</a></li>
+											<li class="a"><a href="index.html">Post Single</a></li>
+											<li class="a"><a href="index.html">Our Store</a></li>
+											<li class="a"><a href="index.html">Product Single</a></li>
+											<li class="a"><a href="index.html">Contact</a></li>
+											<li class="a"><a href="index.html">Thank You</a></li>
 										</ul>
 
 									</li>
@@ -182,7 +183,7 @@
 
 	</section>
 
-	<section id="client-holder" data-aos="fade-up">
+	<!-- <section id="client-holder" data-aos="fade-up">
 		<div class="container">
 			<div class="row">
 				<div class="inner-content">
@@ -194,11 +195,11 @@
 							<a href="#"><img src="images/client-image4.png" alt="client"></a>
 							<a href="#"><img src="images/client-image5.png" alt="client"></a>
 						</div>
-					</div><!--image-holder-->
+					</div> (image-holder)
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<section id="featured-books" class="py-5 my-5">
 		<div class="container">
@@ -312,16 +313,16 @@
 
 						<div class="col-md-6">
 							<div class="product-entry">
-								<h2 class="section-title divider">Best Selling Book</h2>
+								<h2 class="section-title divider2">Best Selling Book</h2>
 
 								<div class="products-content">
 									<div class="author-name">By Timbur Hood</div>
 									<h3 class="item-title">Birds gonna be happy</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu feugiat amet,
+									<p class="p-products">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu feugiat amet,
 										libero ipsum enim pharetra hac.</p>
 									<div class="item-price">$ 45.00</div>
 									<div class="btn-wrap">
-										<a href="#" class="btn-accent-arrow">shop it now <i
+										<a href="#" class="btn2-accent-arrow">shop it now <i
 												class="icon icon-ns-arrow-right"></i></a>
 									</div>
 								</div>
@@ -764,7 +765,7 @@
 			<blockquote data-aos="fade-up">
 				<q>“The more that you read, the more things you will know. The more that you learn, the more places
 					you’ll go.”</q>
-				<div class="author-name">Dr. Seuss</div>
+				<div class="author-name2">Dr. Seuss</div>
 			</blockquote>
 		</div>
 	</section>
@@ -773,7 +774,7 @@
 
 		<div class="section-header align-center">
 			<div class="title">
-				<span>Grab your opportunity</span>
+				<span >Grab your opportunity</span>
 			</div>
 			<h2 class="section-title">Books with offer</h2>
 		</div>
@@ -1045,13 +1046,13 @@
 
 						<div class="col-md-7">
 							<div class="app-info">
-								<h2 class="section-title divider">Download our app now !</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sagittis sed ptibus
+								<h2 class="section-title divider2">Download our app now !</h2>
+								<p class="p-download">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sagittis sed ptibus
 									liberolectus nonet psryroin. Amet sed lorem posuere sit iaculis amet, ac urna.
 									Adipiscing fames semper erat ac in suspendisse iaculis.</p>
 								<div class="google-app">
-									<img src="images/google-play.jpg" alt="google play">
-									<img src="images/app-store.jpg" alt="app store">
+									<img class="Download" src="images/google-play.png" alt="google play" style="width: 150px;">
+									<img class="Download" src="images/app-store.png" alt="app store" style="width: 150px;">
 								</div>
 							</div>
 						</div>
